styles/styles.scss
@use "uswds-core" as * with (
  $theme-utility-breakpoints: (
    "card": false,
    // 160px
    "card-lg": false,
    // 240px
    "mobile": false,
    // 320px
    "mobile-lg": true,
    // 480px
    "tablet": true,
    // 640px
    "tablet-lg": false,
    // 880px
    "desktop": true,
    // 1024px
    "desktop-lg": true,
    // 1200px
    "widescreen": true,
    // 1400px
  ),
  $theme-identifier-max-width: "desktop-lg",
  $theme-footer-max-width: "desktop-lg",
  $theme-header-max-width: "desktop-lg",
  $theme-banner-max-width: "desktop-lg",
  $theme-grid-container-max-width: "desktop-lg",
  $theme-site-margins-breakpoint: "desktop-lg",
  $theme-site-alert-max-width: "desktop-lg",
  $theme-show-notifications: false,
  $theme-font-path: "../node_modules/@uswds/uswds/dist/fonts",
  $theme-image-path: "../node_modules/@uswds/uswds/dist/img",
  $theme-font-type-sans: "public-sans",
  $theme-color-base-lightest: #f9f6f3,
  $theme-color-primary: #344271,
  $theme-color-primary-light: #87a0b4,
  $theme-color-primary-dark: #1b2958,
  $theme-body-background-color: "base-lightest",
  $theme-lead-font-size: "md",
  $theme-hero-image: "../img/slider.jpg",
  $theme-link-color: "primary",
  $theme-link-visited-color: "primary",
  $theme-h1-font-size: "xl",
  $theme-h2-font-size: "lg",
  $theme-h3-font-size: "sm",
  $theme-h4-font-size: "xs",
  $theme-text-measure: 6
);

@forward "uswds";

img {
  height: auto;
}

.usa-prose {
  a {
    @include u-text("primary");
  }
}

.usa-nav__secondary-links a {
  color: #ffffff;
}

.usa-nav__primary button,
.usa-nav__primary > .usa-nav__primary-item > a {
  color: #1b2958;
}

.usa-identifier__logo {
  width: 3rem;
}

.usa-card__img img {
  display: block;
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.circular-image {
  border-radius: 50%;
  overflow: hidden; /* Important to clip the image */
  /* Optional: Add a border if you want */
  /* border: 2px solid #your-border-color; */
}

/* Optional:  If the image isn't perfectly square, you might need this */
.circular-image-2 {
  width: 100%; /* Or height: 100%; depending on how your image is sized */
  height: auto; /* Or width: auto; depending on how your image is sized */
  object-fit: cover; /*  Important to maintain aspect ratio and fill the circle */
}

